syntax = "proto3";

package api.yyets.v1;

import "google/api/annotations.proto";
import "validate/validate.proto";

option go_package = "YYeTsBot-Go/api/yyets/v1;v1";
option java_multiple_files = true;
option java_package = "api.yyets.v1";

service Announcement {
	rpc CreateAnnouncement (CreateAnnouncementRequest) returns (CreateAnnouncementReply);
	rpc UpdateAnnouncement (UpdateAnnouncementRequest) returns (UpdateAnnouncementReply);
	rpc DeleteAnnouncement (DeleteAnnouncementRequest) returns (DeleteAnnouncementReply);
	rpc GetAnnouncement (GetAnnouncementRequest) returns (GetAnnouncementReply);
	rpc ListAnnouncement (ListAnnouncementRequest) returns (ListAnnouncementReply){
		option (google.api.http) = {
			get: "/api/announcement"
		};
	};
}

message CreateAnnouncementRequest {}
message CreateAnnouncementReply {}

message UpdateAnnouncementRequest {}
message UpdateAnnouncementReply {}

message DeleteAnnouncementRequest {}
message DeleteAnnouncementReply {}

message GetAnnouncementRequest {}
message GetAnnouncementReply {}

message ListAnnouncementRequest {
	int64 size = 1 [(validate.rules).int64 = {gt:0, lte: 120}];
	int64 page = 2 [(validate.rules).int64 = {gt:0}];
}
message ListAnnouncementReply {
	int64 count = 1;
	repeated ListAnnouncementReplyItem data = 2;
}
message ListAnnouncementReplyItem {
	string browser = 1;
	string content = 2;
	string date = 3;
	string id = 4;
	string username = 5;
}